--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "dist/v1/**/*.js": {
+    "api/v1/**/*.ts": {
       "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
     {
       "source": "/v1/:path*",
-      "destination": "/dist/v1/:path*"
+      "destination": "/api/v1/:path*"
     }
   ],
   "headers": [
