--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es2020",
-    "outDir": "../dist",
+    "outDir": "./dist",
     "rootDir": "./",
     "esModuleInterop": true,
     "strict": true,
