--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vercel dev",
-    "build": "prisma generate && tsc -p api/tsconfig.json",
+    "build": "prisma generate && tsc",
     "start": "vercel dev",
     "postinstall": "prisma generate"
   },
