--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
+  "version": 2,
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "functions": {
-    "api/v1/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "rewrites": [
     {
       "source": "/v1/:path*",
@@ -16,7 +12,7 @@
        "source": "/(.*)",
        "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://luminous-verses.vercel.app" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
       ]
