--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,5 @@
 # Ignore Prisma WASM and native binaries that conflict with Vercel deployment
-api/generated/prisma/*.wasm
-api/generated/prisma/libquery_engine-*.node
-api/generated/prisma/*.dylib.node
-api/generated/prisma/*.so.node
+prisma/generated/client/*.wasm
+prisma/generated/client/libquery_engine-*.node
+prisma/generated/client/*.dylib.node
+prisma/generated/client/*.so.node
