--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vercel dev",
     "build": "prisma generate && tsc -p api/tsconfig.json",
     "start": "vercel dev",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "populate-descriptions": "tsx scripts/populate-surah-descriptions.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.16.2",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^20.14.10",
     "typescript": "~5.8.3",
-    "@libsql/client": "^0.14.0"
+    "@libsql/client": "^0.14.0",
+    "tsx": "^4.7.1"
   }
 }
