--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/node": "^3.2.29",
     "jose": "^6.0.11",
     "prisma": "^5.22.0",
+    "ws": "^8.18.2",
     "xml2js": "^0.6.2",
     "zod": "^3.25.64"
   },
@@ -31,6 +32,7 @@
     "@libsql/client": "^0.14.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.19.0",
+    "@types/ws": "^8.18.1",
     "@types/xml2js": "^0.4.14",
     "tsx": "^4.7.1",
     "typescript": "~5.8.3"
